fix nabBar issue on mobile nav

--- a/landing.css
+++ b/landing.css
@@ -1425,28 +1425,28 @@ body {
     flex-wrap: wrap;
     position: relative;
   }
-  .nav-links {
-    display: none;
-    position: absolute;
-    top: 80px; /* adjust depending on navbar height */
-    right: 10px;
-    left: 0; /*for keeping hamburger to left till 600px width*/
+  .nav-links { 
+    position: fixed;
+    top: 70px; /* adjust depending on navbar height */
+    right: 10px; 
     margin: 15px; /* aligns the box to the right */
     background-color: white;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 1rem;
+    display: flex;
     flex-direction: column;
     gap: 0.75rem;
     z-index: 1000;
     width: max-content; /* only as wide as content */
-    min-width: 150px;
+    min-width: 150px; 
+    transform: translateX(250px); /* hidden */
+    transition: all 0.4s ease-in-out;
   }
 
   .nav-links.active {
-    display: flex;
-    width: 85vw; /* slide in */
+     transform: translateX(0);
   }
 
   .nav-links a,
@@ -1455,7 +1455,7 @@ body {
     align-items: center; /* Vertical centering */
     justify-content: center;
     padding: 1rem;
-    width: 70vw;
+    width: 10rem;
     font-size: 1rem;
   }
 
